--- a/package.json
+++ b/package.json
@@ -1,17 +1,15 @@
 {
   "scripts": {
-    "start": "node agency.js",
     "test": "mocha",
-    "postinstall": "bower install && grunt build"
+    "postinstall": "bower install && grunt build",
+    "start": "node node_modules/grunt-cli/bin/grunt",
+    "postinstall": "node node_modules/bower/bin/bower install"
   },
 
-  "license": {
-    "type": "MIT",
-    "url": "https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE"
-  },
   "devDependencies": {
     "bootstrap": "^3.3.7",
     "browser-sync": "^2.13.0",
+    "express": "^4.16.0",
     "font-awesome": "^4.6.3",
     "gulp": "^3.9.1",
     "gulp-clean-css": "^2.0.10",
@@ -20,16 +18,16 @@
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.3.2",
     "gulp-uglify": "^1.5.4",
-    "jquery": "^1.11.3",
-    "author": "jrnjerin",
-    "license": "ISC",
-    "dependencies": {
-    "body-parser": "^1.15.2",
-    "express": "^4.14.0",
-    "request": "^2.75.0"
+    "jquery": "^1.11.3"
+  },
+
+  "author": "Sam Rosenbluth",
+  "license": "",
+  "engines": {
+    "node": "8.6.0"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/BlackrockDigital/startbootstrap-agency.git"
-  },
+    "url": "https://github.com/rosenbluth/Sam.Rosenbluth"
+  }
 }
