--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
   "scripts": {
     "test": "mocha",
-    "postinstall": "bower install && grunt build",
-    "start": "node node_modules/grunt-cli/bin/grunt",
-    "postinstall": "node node_modules/bower/bin/bower install"
+    "postinstall": "node node_modules/bower/bin/bower install",
+    "start": "node node_modules/grunt-cli/bin/grunt"
   },
-
-  "devDependencies": {
+  "dependencies": {
     "bootstrap": "^3.3.7",
     "browser-sync": "^2.13.0",
     "express": "^4.16.0",
@@ -20,7 +18,6 @@
     "gulp-uglify": "^1.5.4",
     "jquery": "^1.11.3"
   },
-
   "author": "Sam Rosenbluth",
   "license": "",
   "engines": {
@@ -29,5 +26,8 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/rosenbluth/Sam.Rosenbluth"
+  },
+  "dependencies": {
+    "bower": "^1.8.2"
   }
 }
