--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/rosenbluth/Sam.Rosenbluth.git"
+  },
+  "dependencies": {
+    "grunt-cli": "^1.2.0"
   }
 }
