--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "url": "https://github.com/rosenbluth/Sam.Rosenbluth.git"
   },
   "dependencies": {
-    "grunt-cli": "^1.2.0"
+    "grunt-cli": "^1.2.0",
+    "node": "^8.6.0",
+    "npm": "^5.3.0"
   }
 }
