--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Start Bootstrap",
   "license": {
     "type": "MIT",
-    "url": "https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE"
+    "url": "https://enigmatic-island-67372.herokuapp.com/"
   },
   "devDependencies": {
     "bootstrap": "^3.3.7",
@@ -28,7 +28,7 @@
   },
   "dependencies": {
     "grunt-cli": "^1.2.0",
-    "engines":{
+    "engines": {
     "node": "^8.6.0",
     "npm": "^5.3.0"
   }
