--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "agency",
   "title": "Agency",
   "version": "3.3.7+1",
-  "homepage": "https://enigmatic-island-67372.herokuapp.com/",
+  "homepage": "https://rosenbluth.github.io",
   "author": "Start Bootstrap",
   "license": {
     "type": "MIT",
@@ -27,7 +27,7 @@
     "url": "https://github.com/rosenbluth/Sam.Rosenbluth.git"
   },
   "dependencies": {
-    
+
     "engines": {
       "node": "^8.6.0",
       "npm": "^5.3.0"
