--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "agency",
   "title": "Agency",
   "version": "3.3.7+1",
-  "homepage": "http://startbootstrap.com/template-overviews/agency",
+  "homepage": "https://rosenbluth.github.io",
   "author": "Start Bootstrap",
   "license": {
     "type": "MIT",
@@ -13,6 +13,7 @@
     "browser-sync": "^2.13.0",
     "font-awesome": "^4.6.3",
     "gulp": "^3.9.1",
+    "gulp-build": "^0.5.3",
     "gulp-clean-css": "^2.0.10",
     "gulp-header": "^1.8.7",
     "gulp-less": "^3.1.0",
@@ -23,6 +24,13 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/BlackrockDigital/startbootstrap-agency.git"
+    "url": "https://github.com/rosenbluth/Sam.Rosenbluth.git"
+  },
+  "dependencies": {
+
+    "engines": {
+      "node": "^8.6.0",
+      "npm": "^5.3.0"
+    }
   }
 }
